# vss-simulator

./: README.md
VSS-Core/: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile.debian9  Dockerfile.ubuntu16  Dockerfile.ubuntu18  Dockerfile.ubuntu19  README.md  configure.sh
VSS-Core/include/Builders/: StdinInterpreterBuilder.h
VSS-Core/include/Communications/: CommandReceiver.h  CommandSender.h  ControlReceiver.h  ControlSender.h  DebugReceiver.h  DebugSender.h  StateReceiver.h  StateSender.h
VSS-Core/include/Domain/: Address.h  Ball.h  Command.h  Constants.h  Control.h  Debug.h  DurationType.h  EnvironmentType.h  ExecutionConfig.h  FieldTransformationType.h  MatchFinishType.h  Path.h  Point.h  Pose.h  Robot.h  SideAttackType.h  State.h  TeamType.h  TimeExecutionType.h  WheelsCommand.h
VSS-Core/include/Helpers/: CommandMapper.h  ControlMapper.h  CoordinateTransformer.h  DebugMapper.h  DomainRandomizer.h  Math.h  StateMapper.h
VSS-Core/include/Interfaces/: ICommandReceiver.h  ICommandSender.h  IControlReceiver.h  IControlSender.h  IDebugReceiver.h  IDebugSender.h  IStateReceiver.h  IStateSender.h  IStdinInterpreter.h  IStdinInterpreterBuilder.h
VSS-Core/include/Interpreters/: StdinInterpreter.h
VSS-Core/protos/: command.proto  control.proto  debug.proto  state.proto
VSS-Core/scripts/: base.sh  install-debian9.sh  install-mint18-2.sh  install-ubuntu14-04.sh  install-ubuntu16-04.sh  install-ubuntu16-10.sh  install-ubuntu18-04.sh  install-ubuntu19-04.sh  protos.sh
VSS-Core/src/Builders/: StdinInterpreterBuilder.cpp
VSS-Core/src/Communications/: CommandReceiver.cpp  CommandSender.cpp  ControlReceiver.cpp  ControlSender.cpp  DebugReceiver.cpp  DebugSender.cpp  StateReceiver.cpp  StateSender.cpp
VSS-Core/src/Domain/: Address.cpp  Ball.cpp  Command.cpp  Control.cpp  Debug.cpp  DurationType.cpp  EnvironmentType.cpp  ExecutionConfig.cpp  FieldTransformationType.cpp  MatchFinishType.cpp  Path.cpp  Point.cpp  Pose.cpp  Robot.cpp  SideAttackType.cpp  State.cpp  TeamType.cpp  TimeExecutionType.cpp  WheelsCommand.cpp
VSS-Core/src/Helpers/: CommandMapper.cpp  ControlMapper.cpp  CoordinateTransformer.cpp  DebugMapper.cpp  DomainRandomizer.cpp  Math.cpp  StateMapper.cpp
VSS-Core/src/Interpreters/: StdinInterpreter.cpp
VSS-Core/test/: MainTests.cpp
VSS-Core/test/Builders/: StdinInterpreterBuilderTests.cpp
VSS-Core/test/Domain/: AddressTests.cpp  BallTests.cpp  CommandTests.cpp  ControlTests.cpp  DebugTests.cpp  DurationTypeTests.cpp  EnvironmentTypeTests.cpp  ExecutionConfigTests.cpp  FieldTransformationTypeTests.cpp  MatchFinishTypeTests.cpp  PathTests.cpp  PointTests.cpp  PoseTests.cpp  RobotTests.cpp  SideAttackTypeTests.cpp  StateTests.cpp  TeamTypeTests.cpp  TimeExecutionTypeTests.cpp  WheelsCommandTests.cpp
VSS-Core/test/Helpers/: CommandMapperTests.cpp  CoordinateTransformerTests.cpp  DomainRandomizerTests.cpp  MathTests.cpp
VSS-Core/test/Interpreters/: StdinInterpreterTests.cpp
VSS-SampleCpp/: .gitignore  CMakeLists.txt  README.md  configure.sh
VSS-SampleCpp/src/: generic_player.hpp  generic_player1.hpp  generic_player2.hpp  main.cpp  utils.hpp
VSS-Simulator/: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  configure.sh  install_core.sh
VSS-Simulator/bullet/: Bullet-C-Api.h
VSS-Simulator/bullet/BulletCollision/BroadphaseCollision/: btAxisSweep3.h  btBroadphaseInterface.h  btBroadphaseProxy.h  btDbvt.cpp  btDbvt.h  btDbvtBroadphase.h  btMultiSapBroadphase.cpp  btMultiSapBroadphase.h  btQuantizedBvh.cpp  btQuantizedBvh.h
VSS-Simulator/bullet/BulletCollision/CollisionDispatch/: SphereTriangleDetector.cpp  SphereTriangleDetector.h  btBox2dBox2dCollisionAlgorithm.cpp  btBoxBoxDetector.cpp  btCollisionObject.h  btCollisionWorld.cpp  btCollisionWorld.h  (+15 more)
VSS-Simulator/bullet/LinearMath/: btVector3.h
VSS-Simulator/bullet/vectormath/: vmInclude.h
VSS-Simulator/include/: Arbiter.h  Header.h  Physics.h  RobotPhysics.h  RobotStrategy.h  Simulator.h  Sir.h  StartPositionsHelper.h
VSS-Simulator/include/Communications/: CommandReceiverAdapter.h  ControlReceiverAdapter.h  StateSenderAdapter.h
VSS-Simulator/include/Domain/: SimulationConstants.h
VSS-Simulator/include/Helpers/: Math.h
VSS-Simulator/include/Interfaces/: ICommandReceiverAdapter.h  IControlReceiverAdapter.h  IStateSenderAdapter.h
VSS-Simulator/include/strategies/: ModelStrategy.h  Strategy.h  StrategyBasic.h
VSS-Simulator/src/: Arbiter.cpp  Main.cpp  Physics.cpp  RobotPhysics.cpp  RobotStrategy.cpp  Simulator.cpp  StartPositionsHelper.cpp
VSS-Simulator/src/Communications/: CommandReceiverAdapter.cpp  ControlReceiverAdapter.cpp  StateSenderAdapter.cpp
VSS-Simulator/src/Helpers/: Math.cpp
VSS-Simulator/src/strategies/: ModelStrategy.cpp  Strategy.cpp  StrategyBasic.cpp
VSS-Simulator/test/: CommandTests.cpp  MainTests.cpp
VSS-Viewer/: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  README.md  configure.sh
VSS-Viewer/include/: Kernel.h  World.h
VSS-Viewer/include/Cameras/: TopCamera.h  TvCamera.h
VSS-Viewer/include/Communications/: ControlSenderAdapter.h  DebugReceiverAdapter.h  StateReceiverAdapter.h
VSS-Viewer/include/Core/: Material.h  Math.h
VSS-Viewer/include/Domain/: AsciiEnum.h  ColorEnum.h  CompetitionEnum.h  Robot3d.h
VSS-Viewer/include/Drawers/: FieldDrawerVerySmallSize.h  OriginalDebugDrawer.h  SimpleBallDrawer.h  SimpleRobotDrawer.h
VSS-Viewer/include/Framework/: GlutFramework.h  Keyboard.h
VSS-Viewer/include/Interfaces/: IBallDrawer.h  ICamera.h  IDebugDrawer.h  IFieldDrawer.h  IRobotDrawer.h
VSS-Viewer/src/: Kernel.cpp  Main.cpp  World.cpp
VSS-Viewer/src/Cameras/: TopCamera.cpp  TvCamera.cpp
VSS-Viewer/src/Communications/: ControlSenderAdapter.cpp  DebugReceiverAdapter.cpp  StateReceiverAdapter.cpp
VSS-Viewer/src/Core/: Material.cpp
VSS-Viewer/src/Domain/: Robot3d.cpp
VSS-Viewer/src/Drawers/: FieldDrawerVerySmallSize.cpp  OriginalDebugDrawer.cpp  SimpleBallDrawer.cpp  SimpleRobotDrawer.cpp
VSS-Viewer/src/Framework/: GlutFramework.cpp  Keyboard.cpp
VSS-Viewer/test/: MainTests.cpp  Robot3dTests.cpp
(+132 files in other folders)
